content and image update

--- a/_pages/genuss/index.html
+++ b/_pages/genuss/index.html
@@ -3,7 +3,7 @@ layout: content
 id: genuss
 content-pages: true
 title: Genuss
-intro: "Wer von Griechenland träumt, denkt automatisch an den Geschmack sonnengereifter Oliven, an zarten Feta, frische Meeresfrüchte und ein kühles Glas Retsina auf der schattigen Terrasse einer Taverne. So reichhaltig und abwechslungsreich wie die griechische Natur präsentiert sich auch die Küche, die mit naturbelassenen Produkten und traditionellen Rezepten kulinarische Maßstäbe setzt – salzig wie die Ägäis, verlockend süß wie ein Sonnenaufgang in Santorin oder erfrischend wie die Brisen des Meltemi-Windes. "
+intro: "Wer von Griechenland träumt, denkt automatisch an den Geschmack sonnen&shy;gereifter Oliven, an zarten Feta, frische Meeres&shy;früchte und ein kühles Glas Retsina auf der schattigen Terrasse einer Taverne. So reichhaltig und abwechslungsreich wie die griechische Natur präsentiert sich auch die Küche, die mit natur&shy;belassenen Produkten und traditionellen Rezepten kulinarische Maßstäbe setzt – salzig wie die Ägäis, verlockend süß wie ein Sonnen&shy;aufgang in Santorin oder erfrischend wie die Brisen des Meltemi-Windes. "
 nav: true
 nav-order: 4
 banner:
