--- a/_pages/unentdeckt/index.html
+++ b/_pages/unentdeckt/index.html
@@ -3,7 +3,7 @@ layout: content
 id: unentdeckt
 title: Unentdeckte Orte
 content-pages: true
-intro: "Entdecken Sie von der Natur reich beschenkte Orte, märchenhafte Küsten und antike Schätze, schalten Sie fernab des alltäglichen Trubels inmitten sphärischer Stille ab und lassen Sie sich von Griechenlands unentdeckten Schätzen verzaubern. Im Dorf Vathia bestaunen Sie eine mittelalterliche Skyline vor dem Messenischen Golf. Auf den smaragdgrünen Schwesterinseln Paxos und Antipaxos baden Sie an türkis schimmernden Traumbuchten, während das winzige Eiland Symi mit pastellfarbener Hafenidylle zum Abschalten animiert. Bei so viel Meer, Geschichte und Inselglück gibt es immer etwas Neues zu entdecken. "
+intro: "Entdecken Sie von der Natur reich beschenkte Orte, märchenhafte Küsten und antike Schätze, schalten Sie fernab des alltäglichen Trubels inmitten sphärischer Stille ab und lassen Sie sich von Griechenlands unentdeckten Seiten verzaubern. Auf Nisyros bewundern Sie einen der zugänglichsten Vulkane Europas, werden auf Ikaria zum Sternebeobachter und dürfen beim Wandern und Klettern den Vergleich zwischen mehreren Gebirgen anstellen: Dirfis, Agrafa, Pilion. Bei so viel Natur, Geschichte und Inselglück gibt es immer etwas Neues zu entdecken.  "
 nav: true
 nav-order: 5
 banner:
@@ -15,7 +15,7 @@ banner:
 sections:
 
   - id: one
-    title: Insel Symi
+    title: Insel Nisyros
 
   - id: two
     title: Inseln Paxos & Antipaxos
