--- a/_pages/kultur/index.html
+++ b/_pages/kultur/index.html
@@ -3,7 +3,7 @@ layout: gallery
 id: kultur
 content-pages: true
 title: Kulturelles Erbe
-intro: "Wer Sehnsucht nach geschichtsträchtigen Kulissen, jahrtausendealter Tradition und steingewordener Mythologie verspürt, kommt an der Wiege Europas nicht vorbei. Das imposante UNESCO-Weltkulturerbe reicht von der majestätischen Akropolis in Athen über die schwebenden Meteora-Klöster in Thessalien bis weit hinaus auf’s Meer, wo die Johannesgrotte und eine der ältesten Bibliotheken Griechenlands das Dodekanes-Eiland Patmos zum Jerusalem der Ägäis krönen. Musikfestivals und Theater-Aufführungen inmitten historischer Schauplätze runden das kulturelle Kaleidoskop kunstvoll&nbsp;ab."
+intro: "Wer Sehnsucht nach geschichtsträchtigen Kulissen, jahrtausendealter Tradition und steingewordener Mythologie verspürt, kommt an der Wiege Europas nicht vorbei. Das imposante UNESCO-Weltkulturerbe reicht von der majestätischen Akropolis in Athen über die schwebenden Meteora-Klöster in Thessalien bis weit hinaus aufs Meer, wo die Johannesgrotte und eine der ältesten Bibliotheken Griechenlands das Dodekanes-Eiland Patmos zum Jerusalem der Ägäis krönen. Musikfestivals und Theater-Aufführungen inmitten historischer Schauplätze runden das kulturelle Kaleidoskop kunstvoll ab."
 nav: true
 nav-order: 3
 
