--- a/_pages/straende/index.html
+++ b/_pages/straende/index.html
@@ -3,7 +3,7 @@ layout: gallery
 id: straende
 content-pages: true
 title: Strände & Aktivitäten
-intro: "In Sachen Strandauswahl kann keine andere europäische Urlaubsdestination dem paradiesischen Portfolio Griechenlands das Wasser reichen. Von feinstem Puderzuckersand über von Felstunneln eingerahmte Buchten für Verliebte bis hin zum karminroten Vulkanstrand erwartet Sie eine nahezu endlose Auswahl. Wer die Segel hisst und sich wie Odysseus treiben lässt, wird zwischen artenreichen Archipelen und imposanten Steilküsten auf faszinierende Tauchreviere stoßen. Landratten lassen sich bei einer Partie Golf vom maritimem Weitblick&nbsp;beflügeln."
+intro: "In Sachen Strandauswahl kann keine andere europäische Urlaubs&shy;destination dem paradie&shy;sischen Portfolio Griechenlands das Wasser reichen. Von feinstem Puder&shy;zuckersand über von Fels&shy;tunneln eingerahmte Buchten für Verliebte bis hin zum karminroten Vulkan&shy;strand erwartet Sie eine nahezu endlose Auswahl. Wer die Segel hisst und sich wie Odysseus treiben lässt, wird zwischen arten&shy;reichen Archipelen und imposanten Steil&shy;küsten auf faszinierende Tauch&shy;reviere stoßen. Landratten lassen sich bei einer Partie Golf vom maritimem Weitblick&nbsp;beflügeln."
 nav: true
 nav-order: 2
 
