--- a/_pages/straende/index.html
+++ b/_pages/straende/index.html
@@ -3,7 +3,7 @@ layout: gallery
 id: straende
 content-pages: true
 title: Strände & Aktivitäten
-intro: "In Sachen Strandauswahl kann keine andere europäische Urlaubs&shy;destination dem paradie&shy;sischen Portfolio Griechenlands das Wasser reichen. Von feinstem Puder&shy;zuckersand über von Fels&shy;tunneln eingerahmte Buchten für Verliebte bis hin zum karminroten Vulkan&shy;strand erwartet Sie eine nahezu endlose Auswahl. Wer die Segel hisst und sich wie Odysseus treiben lässt, wird zwischen arten&shy;reichen Archipelen und imposanten Steil&shy;küsten auf faszinierende Tauch&shy;reviere stoßen. Landratten lassen sich bei einer Partie Golf vom maritimem Weitblick&nbsp;beflügeln."
+intro: "In Sachen Strandauswahl kann keine andere europäische Urlaubs&shy;destination dem paradie&shy;sischen Portfolio Griechenlands das Wasser reichen. Von feinstem Puder&shy;zuckersand über von Fels&shy;tunneln eingerahmte Buchten für Verliebte bis hin zum karminroten Vulkans&shy;trand erwartet Sie eine nahezu endlose Auswahl. Wer die Segel hisst und sich wie Odysseus treiben lässt, wird zwischen arten&shy;reichen Archipelen und imposanten Steil&shy;küsten auf faszinierende Tauch&shy;reviere stoßen. Landratten lassen sich bei einer Partie Golf vom maritimen Weitblick&nbsp;beflügeln."
 nav: true
 nav-order: 2
 
