--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,7 +11,7 @@ banner:
   parallax: --left
 
 nav-title: Übersicht
-intro: "Malerische Inselwelten, antike Kultur&shy;schätze, pittoreske Tavernen – die Heimat der Götter ist seit jeher ein Garant für mediterrane Stern&shy;stunden. Erliegen Sie dem himmlisch helle&shy;nischen Mix aus azurblauen Buchten und jahr&shy;tausende&shy;alter Geschichte, bestaunen Sie sich olympische Heilig&shy;tümern und verlieben Sie sich zwischen strahlend weißen Fischer&shy;dörfern und farben&shy;frohen Tauch&shy;revieren in Ihren ganz persön&shy;lichen Traum&shy;strand. Willkommen in Griechenland, einem Kosmos voller landschaft&shy;licher, kultureller und kulinarischer Sehnsuchtsorte. "
+intro: "Malerische Inselwelten, antike Kultur&shy;schätze, pittoreske Tavernen – die Heimat der Götter ist seit jeher ein Garant für mediterrane Stern&shy;stunden. Erliegen Sie dem himmlisch helle&shy;nischen Mix aus azurblauen Buchten und jahr&shy;tausende&shy;alter Geschichte, bestaunen Sie olympische Heilig&shy;tümer und verlieben Sie sich zwischen strahlend weißen Fischer&shy;dörfern und farben&shy;frohen Tauch&shy;revieren in Ihren ganz persön&shy;lichen Traum&shy;strand. Willkommen in Griechenland, einem Kosmos voller landschaft&shy;licher, kultureller und kulinarischer Sehnsuchtsorte."
 
 
 
